# mlogo

./: .clang-format  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
examples/: cube.logo  koch.logo  ludo.logo  tessel.lgo  tessel.logo  twentyptstart.logo  wheel.logo
src/: builtin.cpp  defines.hpp  eval.cpp  eval.hpp  eval_impl.hpp  exceptions.hpp  geometry.cpp  geometry.hpp  graphics.cpp  graphics.hpp  graphics_impl.hpp  interpreter.hpp  main.cc  main.cpp  memory.cpp  memory.hpp  parser.cpp  parser.hpp  parser_impl.hpp  turtle.cpp  turtle.hpp  turtle_impl.hpp  types.cpp  types.hpp  value.cpp  value.hpp
src/builtin/: arithmetic.cpp  comm.cpp  common.hpp  control.cpp  data.cpp  graphics.cpp  main.cpp  memory.cpp
test/: CMakeLists.txt  CMakeLists.txt~
test/data/: caste.logo  flower.logo
test/lib/: CMakeLists.txt.in
test/src/: test_eval.cpp  test_geometry.cpp  test_gtest.cpp  test_interpreter.cpp  test_memory.cpp  test_parser.cpp  test_types.cpp  test_value.cpp
test/src/builtin/: basic_builtin_test_case.hpp  test_arithmetic.cpp  test_comm.cpp
